2006-08-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Allow test for gcc visibility attribute to fail if not GNU C++
2006-08-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, configitems, src/connection_base.hxx:
  - Use GNU/Linux poll() instead of select(), if available
2006-07-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 pqxx-config.in:
  - Is deprecated, and now says so (thanks Roger Leigh)
2006-07-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Test for pkg-config (Roger Leigh)
2006-07-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
  - Missing parenthesis.  Thanks Koen Stegen.
2006-07-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/except.hxx, include/pqxx/result.hxx, src/result.cxx:
  - Lots of new, more specific sql_error-derived exception types
  - Thanks Tomek Rydzynski for getting me going with this
2006-07-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/preprelease, tools/splitconfig:
  - Use new "maketemporary" script to work around mktemp differences
 tools/maketemporary:
  - New
  - Slightly more portable wrapper for mktemp
2006-06-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/Makefile.am:
  - Needed fixing after template2mak stopped changing directories
2006-06-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Check for socket library before checking for libpq.  Thanks Jason Sheets!
 win32/INSTALL.txt:
  - Warned MSYS users to update grep & install mktemp, thanks Jason Sheets
  - Rewrote some text to be a little clearer
  - Reduced duplication in description of "common" file
  - Updated description of "common" file to current way of working
2006-06-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/INSTALL.txt, win32/mingw.mak.template, tools/template2mak.py,
 win32/vc-test.mak.template, win32/vc-libpqxx.mak.template:
  - Make "make" work from main directory, thanks Trigve Siver
2006-06-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in: