@@ -32,6 +32,7 @@ PQXX_HAVE_PQEXECPREPARED	internal	libpq
 PQXX_HAVE_PQFREEMEM	internal	libpq
 PQXX_HAVE_PQFREENOTIFY	internal	libpq
 PQXX_HAVE_PQSERVERVERSION	internal	libpq
+PQXX_HAVE_PQPROTOCOLVERSION	internal	libpq
 PQXX_HAVE_PQFTABLE	internal	libpq
 PQXX_HAVE_PQPUTCOPY	internal	libpq
 PQXX_HAVE_PQRESULTERRORFIELD	internal	libpq
