@@ -1,3 +1,12 @@
+2006-08-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ configitems, configure.ac.in, config/sample-headers/libpq/7.4,
+ config/sample-headers/libpq/8.0, config/sample-headers/libpq/8.1,
+ include/pqxx/connection_base.hxx, src/connection_base.cxx:
+  - Allow server version to be queried
+  - Allow protocol version to be queried
+  - Compatibility fix: check for "std" namespace and gcc 3.4
+ include/pqxx/util.hxx:
+  - Removed PQXX_LIBEXPORT directive from PQAlloc class template
 2006-08-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
  configure.ac.in:
   - Allow test for gcc visibility attribute to fail if not GNU C++
